--- a/MauiCalculatorApp/MainPage.xaml
+++ b/MauiCalculatorApp/MainPage.xaml
@@ -77,6 +77,7 @@
                        FontAttributes="Bold"
                        Margin="0, 20, 0, 0">
                 </Label>
+
                 <Border Grid.Column="1"
                         BackgroundColor="#f2a59e"
                         StrokeShape="RoundRectangle 25"
@@ -85,7 +86,7 @@
                         HorizontalOptions="Center">
 
                     <Label Text="{Binding Source={x:Reference heightSlider}, 
-                        Path=Value, StringFormat='{0:F0} cm'}"
+                        Path=Value, StringFormat='{0:F0} CM'}"
          TextColor="White"
          HorizontalOptions="Center"
          FontAttributes="Bold">
@@ -93,14 +94,47 @@
 
 
                 </Border>
-              
+
                 <Slider x:Name="heightSlider" 
                         ThumbColor="White" 
                         MinimumTrackColor="Gray"
                         MaximumTrackColor="White"
                         Minimum="10"
-                        Maximum="500"
+                        Maximum="250"
                         Value="50">
+                </Slider>
+
+                <Label Text="WEIGHT"
+              TextColor="White"
+              HorizontalOptions="Center"
+              FontAttributes="Bold"
+              Margin="0, 20, 0, 0">
+                </Label>
+
+                <Border Grid.Column="1"
+               BackgroundColor="#f2a59e"
+               StrokeShape="RoundRectangle 25"
+               Padding="20, 10"
+               StrokeThickness="0"
+               HorizontalOptions="Center">
+
+                    <Label Text="{Binding Source={x:Reference weightSlider}, 
+               Path=Value, StringFormat='{0:F0} KG'}"
+TextColor="White"
+HorizontalOptions="Center"
+FontAttributes="Bold">
+                    </Label>
+
+
+                </Border>
+
+                <Slider x:Name="weightSlider" 
+               ThumbColor="White" 
+               MinimumTrackColor="Gray"
+               MaximumTrackColor="White"
+               Minimum="10"
+               Maximum="150"
+               Value="50">
                 </Slider>
 
 
