--- a/MauiCalculatorApp/MainPage.xaml
+++ b/MauiCalculatorApp/MainPage.xaml
@@ -30,52 +30,21 @@
 
                 <Grid ColumnDefinitions="*, *" ColumnSpacing="15">
 
-                    <!--<Border Grid.Column="0"
-                            BackgroundColor="White"
-                            StrokeShape="RoundRectangle 25"
-                            Padding="20, 10"
-                            StrokeThickness="0">
-                        <HorizontalStackLayout 
-                            HorizontalOptions="Center" 
-                            Spacing="10">
-                            
-                            <Image Source="male" 
-                                   HeightRequest="{OnPlatform 25, iOS= 25}" 
-                                   WidthRequest="{OnPlatform 25, iOS=25}">
-                                <Image.Behaviors>
-                                    <toolkit:IconTintColorBehavior TintColor="#e95263" />
-                                </Image.Behaviors>
-                            </Image>
-                            <Label Text="Male" 
-                               FontAttributes="Bold" 
-                               TextColor="#e95263">
-                            </Label>
-                        </HorizontalStackLayout>
-                    </Border>-->
 
-                    <controls:GenderControl Grid.Column="0" IconImageSource="male" Text="Male" Color="#e95263"></controls:GenderControl>
-
-                    <Border Grid.Column="1"
-                          BackgroundColor="#f2a59e"
-                          StrokeShape="RoundRectangle 25"
-                          Padding="20, 10"
-                            StrokeThickness="0">
-                        <HorizontalStackLayout 
-                              HorizontalOptions="Center" 
-                              Spacing="10">
-                            <Image Source="female" 
-                             HeightRequest="{OnPlatform 25, iOS= 25}" 
-                             WidthRequest="{OnPlatform 25, iOS= 25}">           
-                                <Image.Behaviors>
-                                    <toolkit:IconTintColorBehavior TintColor="White" />
-                                </Image.Behaviors>
-                            </Image>
-                            <Label Text="Female" 
-                                 FontAttributes="Bold" 
-                                 TextColor="White"> 
-                            </Label>
-                        </HorizontalStackLayout>
-                    </Border>
+                    <controls:GenderControl Grid.Column="0"
+                                            IconImageSource="male" 
+                                            Text="Male" 
+                                            Color="#e95263"
+                                            BgColor="#ffffff">
+                                            
+                    </controls:GenderControl>
+                    <controls:GenderControl Grid.Column="1" 
+                                            IconImageSource="female" 
+                                            Text="Female" Color="#ffffff"
+                                            BgColor="#f2a59e">                        
+                    </controls:GenderControl>                    
+                    
+                    
                 </Grid>
 
                 <Label Text="HEIGHT"
@@ -161,38 +130,13 @@
                     Offset="-150, -150"/>
                 </Border.Shadow>
             </Border>
-
-            <ImageButton Grid.Row="1" 
-                Source="arrowright"
-                HeightRequest="{OnPlatform 150, iOS=120}"
-                WidthRequest="{OnPlatform 150, iOS=120}"
-                CornerRadius="{OnPlatform 55, iOS=60}"
-                BackgroundColor="White"
-                Padding="20"
-                VerticalOptions="End"
-                HorizontalOptions="End"
-               Margin="0, -75, 20, 150"
-                Pressed="CalculateBMI_Pressed">
-
-                <!--<ImageButton.Margin>
-                    <OnPlatform x:TypeArguments="Thickness">
-                        <On Platform="Default" Value="0, -75, 20, 150"></On>
-                        <On Platform="iOS" Value="0, -60, 20, 150"></On>
-                    </OnPlatform>
-                </ImageButton.Margin>-->
-
-                <ImageButton.Shadow>
-                    <Shadow Brush="#f2a59e"
-                      Radius="55"
-                      Offset="5, 5"/>       
-
-                </ImageButton.Shadow>
-                <ImageButton.Behaviors>
-                    <toolkit:IconTintColorBehavior TintColor="#f2a59e" />
-                </ImageButton.Behaviors>
-
-            </ImageButton>
+            
         </Grid>
+
+        <controls:BmiButtonControl Grid.Row="1" 
+                                   IconImageSource="arrowright" 
+                                   ButtoPressed="CalculateBMI_Pressed">            
+        </controls:BmiButtonControl>
 
         <VerticalStackLayout Grid.Row="2" 
                 Padding="25"
